Update to latest MATSim version
All the necessary changes to switch to new MATSim version